--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                 
                 <div class="question-container">
                     <div class="question">问题2: 请输入您最喜欢的AI助手名称</div>
-                    <input type="text" id="product" name="product" placeholder="例如: iPhone" required>
+                    <input type="text" id="product" name="product" placeholder="例如: Deepseek，豆包，文心一言，GPT-o1等" required>
                 </div>
                 
                 <div class="question-container">
